--- a/flex/register.css
+++ b/flex/register.css
@@ -36,7 +36,7 @@ body{
 }
 .login-form>h2{
   text-transform: capitalize;
-  /* 이이런게 있엇어 앞글자 대문자화해주네!!! */
+  /* 이이런게 있엇어 소문자로 써도 앞글자 대문자화해주네!!! */
   margin-bottom: 20px;
   font-weight: 500;
 }
