--- a/이미지화면구현/gallary.css
+++ b/이미지화면구현/gallary.css
@@ -18,16 +18,15 @@ body{
   height: 100vh;
   font-family: 'Montserrat', sans-serif;
 }
+
 section{
-  /* width: 950px; */
-  width: 100%;
+  width: 950px;
   margin: auto;
 }
 
 /* header */
 nav{
   height: auto;
-  /* border: 1px solid red; */
   padding: 10px;
 }
 nav .gnb{
@@ -92,33 +91,92 @@ nav .gnb{
 
 /* items */
 .items{
-  border: 1px solid blue;
+  margin-top: 60px;
+  /* border: 1px solid blue; */
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.items .item{
-  margin: 5px;
-  width: calc(100% / 3 - 5px*2);
-  /* width: 310px; */
+.item{
+  width: 310px;
   height: 200px;
   overflow: hidden;
+  margin-bottom: 10px;
+  position:relative;
 }
 .item img{
   width: 100%;
-  /* height: 100%; */
 }
 
+/* description */
+.desc{
+  background-color: rgba(0,0,0,0.3);
+  height: 60px;
+  width: 100%;
+  color: #fff ;
+  padding: 10px;
+  position: absolute;
+  transition: 0.5s;
+  bottom: -60px;
+}
+
+.item:hover .desc{
+  bottom: 0;
+  /* transform: translateY( -175%); */
+}
+
+.desc h6{
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+.desc .like{
+  display: flex;
+  justify-content: space-between;
+}
+.like span{
+  font-size: 13px;
+}
+i.fa-heart{
+  color: crimson;
+}
+
+
 /* 테블릿 환경 */
-@media (min-width:768px) and (max-width: 1024px){
-  .items.item{
-    width: calc(100% / 2 - 5px*2);
+@media screen and (min-width:768px) and (max-width: 1024px){
+  section{
+    width: 100%;
+
   }
+  .items .item{
+    width: 49%;
+    margin-right: 2px;
+  }
+  .items .item:nth-child(even){
+    /* border: 3px solid red; */
+    margin-right: 0;
+  }
+
+  
 }
 /* 모바일환경 */
-@media (max-width: 767px){
-  .items.item{
+@media screen and (max-width: 767px){
+  section{
     width: 100%;
-    margin-bottom: 10px;
+
+  }
+  nav .gnb{
+    text-align: center;
+  }
+  .search-box{
+    flex-direction: column;
+  }
+
+  .search-box input{
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .items .item{
+    width: 100%;
+    height: auto;
   }
 }
